overflow bug fix attemp #2

--- a/src/index.css
+++ b/src/index.css
@@ -28,5 +28,5 @@
 }
 
 body {
-  @apply overflow-hidden
+  @apply overflow-hidden h-screen
 }
